# drawgin

./: .hgeol  .hgignore  Dependencies.txt  DrawGin.sln  DrawGin.workspace  DrawGin.workspace.paul_kohut  DrawGin.workspace.session  DrawGin.workspace.session.bak  DrawGin_wsp.mk  Feature_Status.md  ProjectHome.md  ReadMe.txt  cppcheck.list  style.bat
DrawGin/: CMakeLists.txt  DrawGin.cpp  DrawGin.mk  DrawGin.project  DrawGin.vcproj  LICENSE.MORE  ObjectTypes.txt  OcConfig.h  ReadMe.txt  feature_status.txt  stdafx.h  targetver.h
DrawGin/CMakeScripts/: FindGlog.cmake
DrawGin/inc/: ClassMacros.h  OcApApplication.h  OcApClassFactory.h  OcCommon.h  OcConfig.h  OcDbDatabase.h  OcDbDwgVersion.h  OcDbEntity.h  OcDbHardOwnershipId.h  OcDbObject.h  OcDbObjectId.h  OcDbSmartPtrs.h  OcError.h  OcGePoint2D.h  OcGePoint3D.h  OcRxClass.h  OcRxObject.h  wchar_logging.h
DrawGin/inc/templates/: accessors.h  bounded.h
DrawGin/src/: CMakeLists.txt  precompiled.cpp  precompiled.h
DrawGin/src/OcAp/: OcApApplication.cpp  OcApClassFactory.cpp
DrawGin/src/OcBs/: DwgInArchive.cpp  DwgInArchive.h  OcBsDwgCrc.cpp  OcBsDwgCrc.h  OcBsDwgFileHeader.cpp  OcBsDwgFileHeader.h  OcBsDwgObjectMap.cpp  OcBsDwgObjectMap.h  OcBsDwgObjectMapItem.cpp  OcBsDwgObjectMapItem.h  OcBsDwgPreviewImage.cpp  OcBsDwgPreviewImage.h  OcBsDwgSentinels.cpp  OcBsDwgSentinels.h  OcBsStream.cpp  OcBsStream.h  OcBsStreamIn.cpp  OcBsStreamIn.h  OcBsTypes.h
DrawGin/src/OcDb/: OcDbClass.cpp  OcDbClass.h  OcDbClassFactory.h  OcDbClasses.cpp  OcDbClasses.h  OcDbDatabase.cpp  OcDbDwgObjectMap.cpp  OcDbDwgObjectMap.h  OcDbDwgVersion.cpp  OcDbEntity.cpp  OcDbHardOwnershipId.cpp  OcDbHeaderVars.cpp  OcDbHeaderVars.h  OcDbObject.cpp  OcDbObjectId.cpp
DrawGin/src/OcDf/: OcDfClass.cpp  OcDfClass.h  OcDfClasses.cpp  OcDfDwgObjectMap.cpp  OcDfDwgVersion.cpp  OcDfHeaderVars.cpp  OcDfHeaderVars.h
DrawGin/src/OcGe/: OcGePoint2D.cpp  OcGePoint3D.cpp
DrawGin/src/OcRx/: OcRxClass.cpp  OcRxObject.cpp
DrawginApp/: Doxyfile  DrawginApp.sln
DrawginApp/DrawginApp/: DrawginApp.cpp  DrawginApp.vcproj  DrawginApp.vcxproj  DrawginApp.vcxproj.filters  ProgramOptions.cpp  ProgramOptions.h  ReadMe.txt  stdafx.cpp  stdafx.h
DrawginLib/: DrawginLib.vcproj  DrawginLib.vcxproj  DrawginLib.vcxproj.filters  ObjectTypes.txt  ReadMe.txt  dllmain.cpp  feature_status.txt
DrawginLib/inc/: ClassMacros.h  OcApApplication.h  OcApClassFactory.h  OcCmColor.h  OcCommon.h  OcConfig.h  OcDbDatabase.h  OcDbEntity.h  OcDbHardOwnershipId.h  OcDbObject.h  OcDbObjectId.h  OcDbSmartPtrs.h  OcError.h  OcGePoint2D.h  OcGePoint3D.h  OcGiDrawable.h  OcLogger.h  OcObjectDef.h  OcRxClass.h  OcRxObject.h  OcTypes.h  wchar_logging.h
DrawginLib/inc/templates/: accessors.h  bounded.h
DrawginLib/src/: OcCommon.cpp
DrawginLib/src/OcAp/: OcApApplication.cpp
DrawginLib/src/OcBs/: DwgInArchive.cpp  DwgInArchive.h  OcBsDatabaseHeaderVars.cpp  OcBsDatabaseHeaderVars.h  OcBsDwgClass.cpp  OcBsDwgClass.h  OcBsDwgClasses.cpp  OcBsDwgClasses.h  OcBsDwgCrc.cpp  OcBsDwgCrc.h  OcBsDwgDataSection.cpp  OcBsDwgDataSection.h  OcBsDwgFileHeader.cpp  OcBsDwgFileHeader.h  OcBsDwgObjectMap.cpp  OcBsDwgObjectMap.h  OcBsDwgPreviewImage.cpp  OcBsDwgPreviewImage.h  OcBsDwgSecondFileHeader.cpp  OcBsDwgSecondFileHeader.h  OcBsDwgSentinels.cpp  OcBsDwgSentinels.h  OcBsDwgVersion.cpp  OcBsDwgVersion.h  OcBsStream.cpp  OcBsStream.h  OcBsStreamIn.cpp  OcBsStreamIn.h  OcBsTypes.h
DrawginLib/src/OcCm/: OcCmColor.cpp
DrawginLib/src/OcDb/: OcDbDatabase.cpp  OcDbDatabaseHeaderImpl.cpp  OcDbDatabaseHeaderImpl.h  OcDbDatabaseImpl.cpp  OcDbDatabaseImpl.h  OcDbDatabase_p.cpp  OcDbDatabase_p.h  OcDbEntity.cpp  OcDbHardOwnershipId.cpp  OcDbObject.cpp  OcDbObjectId.cpp  OcDbObjectImpl.cpp  OcDbObjectImpl.h  OcDbObject_p.cpp  OcDbObject_p.h  OcObject_p.cpp  OcObject_p.h
DrawginLib/src/OcDf/: OcDfClass.cpp  OcDfClasses.cpp  OcDfClasses.h  OcDfDatabaseHeaderVars.cpp  OcDfDatabaseHeaderVars.h  OcDfDwgClass.cpp  OcDfDwgClass.h  OcDfDwgClasses.cpp  OcDfDwgClasses.h  OcDfDwgDataSection.cpp  OcDfDwgDataSection.h  OcDfDwgObjectMap.cpp  OcDfDwgObjectMap.h  OcDfDwgSecondFileHeader.cpp  OcDfDwgSecondFileHeader.h  OcDfDwgVersion.cpp  OcDfDwgVersion.h  OcDfHeaderVars.cpp
DrawginLib/src/OcGe/: OcGePoint2D.cpp  OcGePoint3D.cpp
DrawginLib/src/OcGi/: OcGiDrawable.cpp
DrawginLib/src/OcMi/: OcCommon.cpp
DrawginLib/src/OcRx/: OcRxClass.cpp  OcRxObject.cpp
